[gd_scene load_steps=2 format=3 uid="uid://dlsj5v0j7urbv"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_p0f7x"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0f7x")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 80.0
theme_override_constants/separation = 80
alignment = 1

[node name="RoomsGenerated" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RoomsGeneratedLabel" type="Label" parent="HBoxContainer/RoomsGenerated"]
layout_mode = 2
text = "Rooms Generated"
horizontal_alignment = 1

[node name="RoomsGeneratedSpinBox" type="SpinBox" parent="HBoxContainer/RoomsGenerated"]
layout_mode = 2
alignment = 1

[node name="MinSize" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MinSizeLabel" type="Label" parent="HBoxContainer/MinSize"]
layout_mode = 2
text = "Min Size"
horizontal_alignment = 1

[node name="MinSizeSpinBox" type="SpinBox" parent="HBoxContainer/MinSize"]
layout_mode = 2
alignment = 1

[node name="MaxSize" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MaxSizeLabel" type="Label" parent="HBoxContainer/MaxSize"]
layout_mode = 2
text = "Max Size"
horizontal_alignment = 1

[node name="MaxSizeSpinBox" type="SpinBox" parent="HBoxContainer/MaxSize"]
layout_mode = 2
alignment = 1

[node name="HorizontalSpread" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HorizontalSpreadLabel" type="Label" parent="HBoxContainer/HorizontalSpread"]
layout_mode = 2
text = "Horizontal Spread"
horizontal_alignment = 1

[node name="HorizontalSpreadSpinBox" type="SpinBox" parent="HBoxContainer/HorizontalSpread"]
layout_mode = 2
alignment = 1

[node name="CorridorWidth" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CorridorWidthLabel" type="Label" parent="HBoxContainer/CorridorWidth"]
layout_mode = 2
text = "Corridor Width"
horizontal_alignment = 1

[node name="CorridorWidthSpinBox" type="SpinBox" parent="HBoxContainer/CorridorWidth"]
layout_mode = 2
alignment = 1

[node name="Apply" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Apply Changes"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 720.0
offset_right = 1200.0
offset_bottom = 800.0
theme_override_constants/separation = 150
alignment = 1

[node name="GenerateNewMap" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Generate New Map"

[node name="GenerateNewTexture" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Generate Map Texture"

[connection signal="pressed" from="HBoxContainer2/GenerateNewMap" to="." method="_on_generate_new_map_pressed"]
[connection signal="pressed" from="HBoxContainer2/GenerateNewTexture" to="." method="_on_generate_new_texture_pressed"]
